<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsSettingsActivity"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewInstSettings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_capitalization"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructions_capitalization"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorOnSecondary"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_cheatmode"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructions_cheatmode"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorOnSecondary"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_writemode"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructions_writemode"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorOnSecondary"/>

    </LinearLayout>

</LinearLayout>