<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsVocabSetOverview"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewInstVoc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@drawable/primary_button_round"
            android:layout_marginBottom="10dp"
            android:id="@+id/returnToMainButton3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_back_to_home"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorOnSecondary"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="@drawable/primary_button_round"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_add_vocab"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorOnSecondary"/>


        <ImageView
            android:id="@+id/addNewVocabSetButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/primary_button_round"
            android:src="@drawable/ic_statistics"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_stats_vocset"
            android:textAlignment="center"
            android:textColor="@color/colorOnSecondary"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</LinearLayout>